Configured Ignore Files

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 __pycache__
 report_xlsx
 excel_report_designer
+owl_playground
+popup_note
+awesome_gallery
+awesome_tshirt
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
